--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,24 @@
-body {
-  padding-top: 4.5rem;
+/* Extra small devices (portrait phones, less than 576px) */
+/* No media query since this is the default in Bootstrap */
+
+ /* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { }
+
+ /* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .dropdown:hover>.dropdown-menu {
+    display: block;
+  }
 }
 
-.dropdown:hover>.dropdown-menu {
-  display: block;
+ /* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+
+}
+
+ /* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  body {
+    padding-top: 4.5rem;
+  }
 }
