center nav items

--- a/css/menu.css
+++ b/css/menu.css
@@ -9,13 +9,12 @@
  /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .navbar {
-    padding: 2em;
+    padding: 1em 0;
   }
-  /* change navbar text color */
-  /* .navbar-light .navbar-text {
-      color: white;
-      font-weight: 700;
-  } */
+  .navbar-brand {
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
   /* change the link color */
   .navbar-light .navbar-nav .nav-link {
     color: white;
@@ -42,14 +41,16 @@
   .dropdown button {
     background-color: #243f7d;
   }
-  .dropdown:hover>.dropdown-menu {
-    display: block;
+  .dropdown > .dropdown-menu {
     background-color: #243f7d;
   }
-  .dropdown:hover>.dropdown-menu a:hover {
+  .dropdown:hover >.dropdown-menu {
+    display: block;
+  }
+  .dropdown:hover > .dropdown-menu a:hover {
     background-color:#0c204f;
   }
-  .dropdown:hover>.dropdown-menu a {
+  .dropdown > .dropdown-menu a {
     color: white;
   }
   .dropdown-toggle::after {
@@ -60,23 +61,32 @@
   .dropdown-multicol {
     width: 30em;
   }
-  .dropdown-multicol > .dropdown-col {
+  .dropdown-multicol > .dropdown-col{
     display:inline-block;
     width: 32%;
+    justify-content: space-between;
   }
+  .dropdown-row > .dropdown-item {
+    display:inline-block;
+    width: 100%;
+  }
+
 
 }
 
  /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
   .navbar {
-    padding: 3em;
+    padding: 1em 0;
   }
 }
 
  /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
   .navbar {
-    padding: 3em 0 3em 6em;
+    padding: 1em 0;
+  }
+  .navbar-brand {
+    margin-right: 5rem;
   }
 }
