--- a/css/menu.css
+++ b/css/menu.css
@@ -3,11 +3,23 @@
 
 /* on hover if needed rgba(249, 159, 42, .75); */
 
+.fixed-top {
+  overflow-y: auto;
+}
+.navbar-nav .dropdown-menu {
+  height: 50vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
  /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { }
 
  /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+  .fixed-top {
+    overflow-y: initial;
+  }
   .navbar {
     padding: 1em 0;
   }
@@ -24,7 +36,7 @@
   .navbar-light .nav-item.active .nav-link,
   .navbar-light .nav-item:focus .nav-link,
   .navbar-light .nav-item:hover .nav-link {
-    color: rgba(249, 159, 42);
+    color: #f99f2a;
   }
   /* change the color of visited links */
   .navbar-light a:visited {
@@ -34,44 +46,45 @@
     width: 100%;
     height: auto;
   }
-   .dropdown {
+  .dropdown {
     margin-right: .75em;
     color: white;
   }
   .dropdown button {
-    background-color: #243f7d;
+    background-color: #0c204f;
+    border-color: #0c204f;
   }
-  .dropdown > .dropdown-menu {
+  .dropdown button:hover {
+    color: #f99f2a;
     background-color: #243f7d;
+    border-color: #243f7d;
   }
-  .dropdown:hover >.dropdown-menu {
+  .dropdown .dropdown-menu {
+    background-color: #243f7d;
+    font-size: .75em;
+    height: auto;
+  }
+  .dropdown:hover .dropdown-menu {
     display: block;
   }
-  .dropdown:hover > .dropdown-menu a:hover {
-    background-color:#0c204f;
+  .dropdown:hover .dropdown-menu a:hover {
+    color: #f99f2a;
+    background-color: #243f7d;
   }
-  .dropdown > .dropdown-menu a {
+  .dropdown .dropdown-menu a {
     color: white;
   }
   .dropdown-toggle::after {
     display: none;
   }
-
   /* Columns */
   .dropdown-multicol {
-    width: 30em;
+    width: 34em;
   }
-  .dropdown-multicol > .dropdown-col{
-    display:inline-block;
-    width: 32%;
-    justify-content: space-between;
-  }
-  .dropdown-row > .dropdown-item {
+  .dropdown-row .dropdown-item {
     display:inline-block;
     width: 100%;
   }
-
-
 }
 
  /* Large devices (desktops, 992px and up) */
@@ -83,8 +96,30 @@
 
  /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+  body {
+    padding-top: 5em;
+  }
+  #cta {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1031;
+    height: 2.5em;
+    background-color: #0c204f;
+    color: white;
+  }
+  #cta .row {
+    margin-top: .5em;
+    align-items: center;
+    justify-content: center;
+  }
+  .phone {
+    font-weight: 700;
+    color: #f99f2a;
+  }
   .navbar {
-    padding: 1em 0;
+    padding: 3.5em 0 1em 0;
   }
   .navbar-brand {
     margin-right: 5rem;
