--- a/css/menu.css
+++ b/css/menu.css
@@ -1,8 +1,7 @@
 /* Extra small devices (portrait phones, less than 576px) */
 /* No media query since this is the default in Bootstrap */
 
-/* on hover if needed rgba(249, 159, 42, .75); */
-
+/*** HEADER ***/
 body {
   padding-top: 5em;
 }
@@ -17,7 +16,7 @@ body {
 }
 #cta {
   position: relative;
-  height: 2.5em;
+  height: 3em;
   background-color: #0c204f;
 }
 #cta .row {
@@ -25,29 +24,30 @@ body {
   margin-bottom: .5em;
   align-items: center;
   justify-content: center;
-  font-size: .75em;
+  font-size: .85em;
   background-color: #0c204f;
   color: white;
 }
 #cta p {
   margin-bottom: 0;
   text-align: center;
+  font-weight: 300;
 }
 .phone a{
-  font-weight: 700;
+  font-weight: 800;
   color: #ffcc00;
 }
-/* #fullnav {
-  margin: 0 auto;
-} */
-.navbar-nav .dropdown-menu {
-  height: 50vh;
-  overflow-y: scroll;
+#brand-wrap {
+  width: 100%;
+  text-align: center;
+}
+.dropdown .dropdown-menu {
+  max-height: 30vh;
+  overflow-y: auto;
   overflow-x: hidden;
 }
-.navbar-brand {
-  margin-right: 2.5rem;
-  margin-left: .5rem;
+#navbarMenu {
+  padding-top: 1em;
 }
 .rectangle, .triangle {
   display: none;
@@ -55,52 +55,80 @@ body {
 
 /* drop down mobile */
 .dropdown {
-  margin-right: .75em;
-  color: white;
   line-height: 1.5;
 }
 .dropdown button {
-  background-color: #263f7f;
+  background-color: #fff;
   border: none;
   width: 100%;
   border-radius: initial;
-
+  font-weight: 700;
+  color: #0c204f;
 }
-.dropdown button:hover {
+.dropdown button:focus {
+  box-shadow: none;
   color: #f99f2a;
-  background-color: #263f7f;
-  border: none;
+}
+.navbar-toggler:hover, .navbar-toggler:focus {
+  background: none;
 }
 .dropdown .dropdown-menu {
-  background-color: #1c2d59;
+  background-color: #e7e7e7;
   font-size: .85em;
-  height: auto;
   border-radius: 0;
-}
-.dropdown:hover .dropdown-menu {
-  display: block;
-}
-.dropdown:hover .dropdown-menu a:hover {
-  color: #f99f2a;
-  background-color: #1c2d59;
+  text-align: center;
 }
 .dropdown .dropdown-menu a {
+  color: #0c204f;
+}
+.dropdown .dropdown-menu .dropdown-item:hover,
+.dropdown .dropdown-menu .dropdown-item:focus {
+  background-color: transparent;
+}
+.dropdown .dropdown-menu .dropdown-item:active {
+  background-color:  #1c2d59;
   color: white;
 }
 .dropdown-toggle::after {
   display: none;
 }
 /* Rows and Columns */
-.dropdown-multicol {
-  width: 34em;
-}
 .dropdown-row .dropdown-item {
   display:inline-block;
   width: 100%;
+  font-weight: 700;
 }
 
+/*** FOOTER ***/
+#ft-divider {
+  border-top: 2px solid #163683;
+}
 
- /* Small devices (landscape phones, 576px and up) */
+#ft-links, #ft-links a,
+#ft-addy, #ft-addy a, #ft-copyright {
+  line-height: .5;
+  color: white;
+}
+
+#ft-links {
+  font-weight: 600;
+}
+
+#ft-links a:focus, #ft-links a:active {
+  text-decoration: none;
+  color: #f99f2a;
+}
+
+#ft-links, #ft-addy {
+  font-size: .85em;
+}
+
+#ft-copyright {
+  padding-right: 0;
+  font-size: .65em;
+}
+
+/* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
   #break {
     display: none;
@@ -108,11 +136,9 @@ body {
   #cta .row {
     font-size: initial;
   }
-  .navbar-brand {
-    margin-right: 14rem;
-    margin-left: 1rem;
-  }
 }
+
+
  /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   body {
@@ -121,17 +147,32 @@ body {
   #cta {
     margin-bottom: 1em;
   }
-  .fixed-top {
-    overflow-y: initial;
+  #cta p {
+    font-size: 0.9rem;
+  }
+  #ft-links a:hover {
+    text-decoration: none;
+    color: #f99f2a;
+  }
+}
+
+
+ /* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .navbar-expand-lg {
+    flex-flow: row wrap;
   }
   .navbar {
     padding: 0;
   }
-  .navbar-expand-md {
-    flex-flow: row wrap;
+  #brand-wrap {
+    width: auto;
   }
-  .navbar-brand {
-    margin-right: 1rem;
+  .fixed-top {
+    overflow-y: initial;
+  }
+  #brand-wrap .navbar-brand {
+    margin-right: 4rem;
     margin-left: 1rem;
     padding-top: 0;
     padding-bottom: 0;
@@ -157,6 +198,7 @@ body {
   }
   #navbarMenu {
     margin-top: 1em;
+    padding-top: 0;
   }
   .dropdown .rectangle {
     display: block;
@@ -180,22 +222,26 @@ body {
     color: white;
   }
   .dropdown button {
-    background-color: #263f7f;
-    font-size: .7rem;
+    background-color: #233f7c;
+    font-size: .75rem;
     font-weight: 700;
     padding: .65rem 1.05rem;
     line-height: 1.35;
+    color:white;
   }
   .dropdown button:hover {
     color: #f99f2a;
-    background-color: #243f7d;
+    background-color: #233f7c;
+    border: none;
   }
   .dropdown .dropdown-menu {
     background-color: #1c2d59;
     border: none;
     font-size: .85em;
-    height: auto;
+    max-height: 50vh;
+    overflow: inherit;
     padding: .5rem 0 1rem 0;
+    text-align: left;
   }
   .dropdown:hover .dropdown-menu {
     display: block;
@@ -209,7 +255,6 @@ body {
   }
   .dropdown-row .dropdown-item {
     color: #f99f2a;
-    font-weight: 700;
   }
   .dropdown-toggle::after {
     display: none;
@@ -259,17 +304,13 @@ body {
   }
 }
 
- /* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-
-}
 
  /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
   body {
     padding-top: 8em;
   }
-  .navbar-brand {
+  #brand-wrap .navbar-brand {
     margin-right: 5rem;
   }
 }
