--- a/css/form.css
+++ b/css/form.css
@@ -11,7 +11,7 @@
     font-weight:700;
     line-height: .75;
     padding-top: 1em;
-    font-size: 2em;
+    font-size: 1.5em;
   }
 
   .contactForm p {
@@ -56,7 +56,10 @@
   }
 
   body .gform_wrapper .top_label input.medium, body .gform_wrapper .top_label select.medium {
+    width: 100%;
+    width: -moz-available;
     width: -webkit-fill-available;
+    width: fill-available;
   }
 
   body .gform_wrapper .gform_body .gform_fields .gfield .ginput_container_select #input_1_9 {
@@ -66,13 +69,13 @@
     outline: none;
     outline-offset: 0;
     border-radius: 0;
-    padding: 16px 24px;
+    padding: 14px 24px;
     -webkit-appearance: none;
     -moz-appearance: none;
     background-image: url("/wp-content/themes/twentynineteen-child/img/arrow.svg");   /* add custom arrow */
     background-repeat: no-repeat;
     background-position: 95% 55%;
-    background-size: 2em;
+    background-size: 1.5em;
   }
 
   body .gform_wrapper .gform_body .gform_fields .gfield .ginput_container_select #input_1_9::-ms-expand {
@@ -93,7 +96,19 @@
     -webkit-box-shadow: none;
     background-color: #F99F2A;
   }
+}
 
+@media all and (-ms-high-contrast:none){
+  *::-ms-backdrop, .gfmc-column { display: inline-block;} /* IE11 */
+  *::-ms-backdrop, .gform_wrapper.gf_browser_ie .gform_footer input.button {
+    padding: 18px 24px !important;
+  }
+}
+
+@media only screen and (min-width: 641px) and (-ms-high-contrast:none) {
+  *::-ms-backdrop, body .gform_wrapper textarea.medium {
+    height: 140px !important;
+  }
 }
 
 @media only screen and (min-width: 641px) {
@@ -155,11 +170,15 @@
   }
 
   body .gform_wrapper .top_label input.medium, body .gform_wrapper .top_label select.medium {
+    width: 100%;
+    width: -moz-available;
     width: -webkit-fill-available;
+    width: fill-available;
   }
 
   body .gform_wrapper .gform_body .gform_fields .gfield .ginput_container_select #input_1_9 {
     -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
     background: #fff;
     border: solid 1px #ccc;
     outline: none;
